# optimization

./: CMakeLists.txt  lab_no.h  main.cpp  matrix.cpp  ode_solver.cpp  opt_alg.cpp  opt_alg.h  solution.cpp
lab/lab_1/: jałocha_wiszniewski_zborowski.docx  jałocha_wiszniewski_zborowski.xlsx
lab/lab_2/: jałocha_wiszniewski_zborowski.docx  jałocha_wiszniewski_zborowski.xlsx
lab/lab_3/: xlsx3.xlsx
lab/lab_4/: jałocha_wiszniewski_zborowski.docx  jałocha_wiszniewski_zborowski.xlsx  jałocha_wiszniewski_zborowski_2.xlsx  xlsx4 — kopia.xlsx  xlsx4.xlsx
lab/lab_5/: jałocha_wiszniewski_zborowski.docx  jałocha_wiszniewski_zborowski.xlsx
